implented save drag feature

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -15,7 +15,7 @@
     "message": "Are you sure you want to remove all notes"
   },
   "deleteMessage": {
-    "message": "Are you sure you want to remove this Note"
+    "message": "Are you sure you want to remove  Note"
   },
   "seeAllNote": {
     "message": "All Notes"
