changed extension name from stickyNotes to stick it

--- a/_locales/ch/messages.json
+++ b/_locales/ch/messages.json
@@ -3,7 +3,7 @@
     "message": "Stick it - web notes"
   },
   "appDescription": {
-    "message": "This handy Chrome extension allows you to create and save sticky notes directly on the websites you visit"
+    "message": "This handy Chrome extension allows you to create and save Stick it - web notes directly on the websites you visit"
   },
   "brandName": {
     "message": "便签"
