--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -3,10 +3,10 @@
     "message": "Stick it - web notes"
   },
   "appDescription": {
-    "message": "This handy Chrome extension allows you to create and save sticky notes directly on the websites you visit"
+    "message": "This handy Chrome extension allows you to create and save Stick it - web notes  directly on the websites you visit"
   },
   "brandName": {
-    "message": "Sticky Notes"
+    "message": "Stick it - web notes"
   },
   "noOfNotes": {
     "message": "All Notes"
