fix minor issue and highlight functionality hostName in sticky note tab

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -21,7 +21,7 @@
     "message": "All Notes"
   },
   "pinAll": {
-    "message": "pin/unpin (popup or any other place)"
+    "message": "pin/unpin"
   },
   "unPinAll": {
     "message": "Un Pin All"
