--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -21,7 +21,7 @@
     "message": "Toutes les notes"
   },
   "pinAll": {
-    "message": "épingler/désépingler (popup ou tout autre endroit)"
+    "message": "épingler/désépingler "
   },
   "unPinAll": {
     "message": "Désépingler tout"
