--- a/_locales/ge/messages.json
+++ b/_locales/ge/messages.json
@@ -24,7 +24,7 @@
     "message": "löschen (Popup oder an einem anderen Ort)"
   },
   "pinAll": {
-    "message": "anheften/abheften (Popup oder an einem anderen Ort)"
+    "message": "anheften/abheften "
   },
   "unPinAll": {
     "message": "Alle lösen"
