--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -24,7 +24,7 @@
     "message": "削除（ポップアップまたは他の場所）"
   },
   "pinAll": {
-    "message": "ピン留め/ピン留め解除（ポップアップまたは他の場所）"
+    "message": "ピン留め/ピン留め解除"
   },
   "unPinAll": {
     "message": "すべてのピンを外す"
