--- a/_locales/ch/messages.json
+++ b/_locales/ch/messages.json
@@ -21,7 +21,7 @@
     "message": "所有便签"
   },
   "pinAll": {
-    "message": "固定/取消固定（弹出窗口或其他任何地方）"
+    "message": "固定/取消固定"
   },
   "unPinAll": {
     "message": "取消固定所有"
